<resources>
    <string name="app_name">OneTimePad</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="decrypt_txt">Decrypted text:</string>
    <string name="encrypt_decrypt">Encrypt/Decrypt</string>
    <string name="encrypt_txt">Encrypted text:</string>
    <string name="message">Message:</string>
    <string name="key">Key:</string>
    <string name="one_time_pad">One Time Pad</string>
</resources>
